--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 /src/config/.env
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environment files
+.env
+.env.local
+.env.*.local
